tests222/tests2/test305.out
lli: <stdin>:1:1: error: expected top-level entity
line 11: variable y is not defined
^
